--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,9 @@
 !.yarn/plugins
 !.yarn/releases
 !.yarn/versions
+ next build output
+.next/
+out/
 
 # testing
 /coverage
@@ -31,7 +34,10 @@ yarn-error.log*
 .pnpm-debug.log*
 
 # env files (can opt-in for committing if needed)
+# env / secrets
 .env*
+!.env.example
+
 
 # vercel
 .vercel
