--- a/package.json
+++ b/package.json
@@ -3,11 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev -H 0.0.0.0 -p 3000",
     "build": "next build --turbopack",
     "start": "next start",
     "lint": "eslint",
-    "video:build": "scripts/build-video.sh"
+    "video:build": "scripts/build-video.sh",
+    "tunnel": "ngrok http 3000",
+    "share": "npm-run-all -p dev tunnel",
+    "url": "curl -s http://127.0.0.1:4040/api/tunnels | python -c 'import sys,json; d=sys.stdin.read(); print(next((x.get(\"public_url\",\"\") for x in (json.loads(d).get(\"tunnels\") or []) if x.get(\"proto\")==\"https\"), \"\")) if d.strip() else \"\"'"
   },
   "dependencies": {
     "@headlessui/react": "^2.2.8",
@@ -28,7 +31,9 @@
     "autoprefixer": "^10.4.21",
     "eslint": "^9",
     "eslint-config-next": "15.5.4",
+    "npm-run-all": "^4.1.5",
     "postcss": "^8.5.6",
+    "sharp": "^0.34.4",
     "tailwindcss": "^4.1.13",
     "typescript": "^5"
   }
